Fix text wrapping issue with @large window width

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -17,7 +17,6 @@
 .centered {
     @include large {
         width: calc(100% - var(--sidebar-width));
-        float: left;
     }
 }
 
